Documentation/Ingress_Resource/yaml-files/setup_cis_bigip1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bigip1-ctlr-deployment
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: k8s-bigip1-ctlr
  # DO NOT INCREASE REPLICA COUNT
  replicas: 1
  template:
    metadata:
      name: k8s-bigip1-ctlr
      labels:
        app: k8s-bigip1-ctlr
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      serviceAccountName: k8s-bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:latest"
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            # See the k8s-bigip-ctlr documentation for information about
            # all config options
            # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=172.18.10.1",
            "--bigip-partition=kubernetes",
            "--insecure=true",
            "--default-ingress-ip=172.16.10.90",
            "--pool-member-type=cluster"
            ]
