Documentation/Ingress_Resource/yaml-files/2-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
  selector:
    app: web

---
apiVersion: v1
kind: Service
metadata:
  name: web1
  namespace: default
  labels:
    app: web1
spec:
  ports:
  - name: web1
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
  selector:
    app: web1
